04_services/nextcloud/dev/ingressroute-patch.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
spec:
  routes:
    - match: Host(`nextcloud.192.168.0.13.xip.io`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-tls
spec:
  routes:
    - match: Host(`nextcloud.192.168.0.13.xip.io`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
